@@ -1,6 +1,5 @@
 package com.lesso.neverland.group.application;
 
-import com.lesso.neverland.comment.repository.CommentRepository;
 import com.lesso.neverland.common.base.BaseException;
 import com.lesso.neverland.common.base.BaseResponse;
 import com.lesso.neverland.common.image.ImageService;
@@ -9,7 +8,6 @@ import com.lesso.neverland.group.dto.*;
 import com.lesso.neverland.group.repository.GroupRepository;
 import com.lesso.neverland.puzzle.domain.Puzzle;
 import com.lesso.neverland.puzzle.repository.PuzzleRepository;
-import com.lesso.neverland.user.application.AuthService;
 import com.lesso.neverland.user.application.UserService;
 import com.lesso.neverland.user.domain.User;
 import com.lesso.neverland.user.domain.UserTeam;
@@ -22,11 +20,11 @@ import org.springframework.web.multipart.MultipartFile;
 
 import java.io.IOException;
 import java.time.LocalDate;
+import java.time.YearMonth;
 import java.time.ZoneId;
 import java.time.format.DateTimeFormatter;
 import java.time.temporal.ChronoUnit;
 import java.util.*;
-import java.util.stream.Collectors;
 
 import static com.lesso.neverland.common.base.BaseResponseStatus.*;
 import static com.lesso.neverland.common.constants.Constants.ACTIVE;
@@ -39,10 +37,8 @@ public class GroupService {
     private final UserRepository userRepository;
     private final GroupRepository groupRepository;
     private final PuzzleRepository puzzleRepository;
-    private final AuthService authService;
     private final ImageService imageService;
     private final UserTeamRepository userTeamRepository;
-    private final CommentRepository commentRepository;
 
     // 그룹 목록 조회
     public BaseResponse<GroupListResponse> getGroupList() {
@@ -53,7 +49,7 @@ public class GroupService {
                     String startYear = group.getStartDate().format(DateTimeFormatter.ofPattern("yyyy"));
                     return new GroupListDto(group.getTeamIdx(), group.getTeamImage(), startYear, group.getName(),
                             group.getUserTeams().size(), group.getAdmin().getProfile().getNickname(), calculateRecentUpdate(group));
-                }).collect(Collectors.toList());
+                }).toList();
         return new BaseResponse<>(new GroupListResponse(groupListDto));
     }
 
@@ -67,30 +63,58 @@ public class GroupService {
         return daysBetween + "일 전";
     }
 
-    // 그룹 퍼즐 목록 조회
-    public BaseResponse<GroupPuzzleListResponse> getGroupPuzzleList(Long groupIdx) {
-        User user = userRepository.findById(userService.getUserIdxWithValidation()).orElseThrow(() -> new BaseException(INVALID_USER_IDX));
+    // 그룹 프로필 조회
+    public BaseResponse<GroupProfileResponse> getGroupProfile(Long groupIdx) {
         Team group = groupRepository.findById(groupIdx).orElseThrow(() -> new BaseException(INVALID_GROUP_IDX));
-        List<Puzzle> groupPuzzleList = puzzleRepository.findByTeamAndStatusEqualsOrderByCreatedDateDesc(group, ACTIVE);
+        List<String> memberImageList = group.getUserTeams().stream()
+                .map(userTeam -> userTeam.getUser().getProfile().getProfileImage())
+                .limit(3)
+                .toList();
 
-        List<GroupPuzzleDto> groupPuzzleListDto = groupPuzzleList.stream()
-                .map(groupPuzzle -> new GroupPuzzleDto(
-                        groupPuzzle.getTitle(),
-                        groupPuzzle.getPuzzleImage(),
-                        groupPuzzle.getUser().getProfile().getNickname())).collect(Collectors.toList());
-        return new BaseResponse<>(new GroupPuzzleListResponse(group.getName(), groupPuzzleListDto));
+        Integer puzzleCount = puzzleRepository.countByTeam(group);
+
+        LocalDate today = LocalDate.now(ZoneId.of("Asia/Seoul"));
+        long dayCount = ChronoUnit.DAYS.between(group.getStartDate(), today);
+
+        GroupProfileResponse profile = new GroupProfileResponse(group.getName(), group.getStartDate().getYear(), memberImageList,
+                group.getUserTeams().size(), puzzleCount, dayCount);
+        return new BaseResponse<>(profile);
     }
 
-    // 그룹 퍼즐 상세 조회
-    public BaseResponse<GroupPuzzleResponse> getGroupPuzzle(Long groupIdx, Long puzzleIdx) {
-        Team group = groupRepository.findById(groupIdx).orElseThrow(() -> new BaseException(INVALID_GROUP_IDX));
-        Puzzle puzzle = puzzleRepository.findById(puzzleIdx).orElseThrow(() -> new BaseException(INVALID_PUZZLE_IDX));
-        if (!puzzle.getTeam().equals(group)) throw new BaseException(NO_GROUP_PUZZLE);
 
-        return new BaseResponse<>(new GroupPuzzleResponse(puzzle.getTitle(), puzzle.getContent(), puzzle.getCreatedDate(),
-                puzzle.getUser().getProfile().getNickname(), puzzle.getBackgroundMusic(), puzzle.getBackgroundMusicUrl(),
-                puzzle.getPuzzleImage()));
-    }
+    //TODO: 퍼즐 도메인 하위로 이동
+//    // 그룹 상세 조회
+//    public BaseResponse<GroupProfileResponse> getGroupDetail() {
+//
+//    }
+//
+//    // 그룹 퍼즐 목록 조회
+//    public BaseResponse<GroupPuzzleListResponse> getGroupPuzzleList(Long groupIdx) {
+//        User user = userRepository.findById(userService.getUserIdxWithValidation()).orElseThrow(() -> new BaseException(INVALID_USER_IDX));
+//        Team group = groupRepository.findById(groupIdx).orElseThrow(() -> new BaseException(INVALID_GROUP_IDX));
+//        List<Puzzle> groupPuzzleList = puzzleRepository.findByTeamAndStatusEqualsOrderByCreatedDateDesc(group, ACTIVE);
+//
+//        List<GroupPuzzleDto> groupPuzzleListDto = groupPuzzleList.stream()
+//                .map(groupPuzzle -> new GroupPuzzleDto(
+//                        groupPuzzle.getTitle(),
+//                        groupPuzzle.getPuzzleImage(),
+//                        groupPuzzle.getUser().getProfile().getNickname(),
+//                        groupPuzzle.getCreatedDate().toString(),
+//                        groupPuzzle.getLocation())).collect(Collectors.toList());
+//        return new BaseResponse<>(new GroupPuzzleListResponse(group.getName(), groupPuzzleListDto));
+//    }
+//
+//    // TODO: 퍼즐 도메인 하위로 이동
+//    // 그룹 퍼즐 상세 조회
+//    public BaseResponse<GroupPuzzleResponse> getGroupPuzzle(Long groupIdx, Long puzzleIdx) {
+//        Team group = groupRepository.findById(groupIdx).orElseThrow(() -> new BaseException(INVALID_GROUP_IDX));
+//        Puzzle puzzle = puzzleRepository.findById(puzzleIdx).orElseThrow(() -> new BaseException(INVALID_PUZZLE_IDX));
+//        if (!puzzle.getTeam().equals(group)) throw new BaseException(NO_GROUP_PUZZLE);
+//
+//        return new BaseResponse<>(new GroupPuzzleResponse(puzzle.getTitle(), puzzle.getContent(), puzzle.getCreatedDate(),
+//                puzzle.getUser().getProfile().getNickname(), puzzle.getBackgroundMusic(), puzzle.getBackgroundMusicUrl(),
+//                puzzle.getPuzzleImage()));
+//    }
 
     // [관리자] 그룹 수정 화면 조회
     public BaseResponse<GroupEditViewResponse> getGroupEditView(Long groupIdx) {
@@ -98,7 +122,7 @@ public class GroupService {
         User user = userRepository.findById(userService.getUserIdxWithValidation()).orElseThrow(() -> new BaseException(INVALID_USER_IDX));
         validateAdmin(user, group);
 
-        return new BaseResponse<>(new GroupEditViewResponse(group.getName(), group.getTeamImage()));
+        return new BaseResponse<>(new GroupEditViewResponse(group.getName(), group.getTeamImage(), group.getStartDate().toString()));
     }
 
     // [관리자] 그룹 수정
@@ -112,6 +136,11 @@ public class GroupService {
             if (!editGroupRequest.name().equals("") && !editGroupRequest.name().equals(" "))
                 group.modifyName(editGroupRequest.name());
             else throw new BaseException(BLANK_GROUP_NAME);
+        } if (editGroupRequest.startDate() != null) {
+            if (!editGroupRequest.startDate().equals("") && !editGroupRequest.startDate().equals(" ")) {
+                YearMonth startDate = YearMonth.parse(editGroupRequest.startDate(), DateTimeFormatter.ofPattern("yyyy-MM"));
+                group.modifyStartDate(startDate);
+            } else throw new BaseException(BLANK_GROUP_START_DATE);
         } if (editGroupRequest.memberList() != null) {
             List<UserTeam> originalMemberList = group.getUserTeams();
             userTeamRepository.deleteAll(originalMemberList);
@@ -202,6 +231,7 @@ public class GroupService {
         return new BaseResponse<>(SUCCESS);
     }
 
+    // TODO: 퍼즐 도메인 하위로 이동
     // 그룹 피드 등록
     public BaseResponse<String> createGroupPuzzle(Long groupIdx, MultipartFile image, GroupPuzzleRequest groupPuzzleRequest) throws IOException {
         Team group = groupRepository.findById(groupIdx).orElseThrow(() -> new BaseException(INVALID_GROUP_IDX));
